feat(docs/examples): nft output extraction example based on sdk (#1478)
* feat(docs): add nft output claiming test example based on sdk usage

--- a/docs/examples/rust/Cargo.toml
+++ b/docs/examples/rust/Cargo.toml
@@ -31,6 +31,10 @@ name = "nft-output-claim"
 path = "stardust/nft-output-claim.rs"
 
 [[example]]
+name = "nft-output-claim"
+path = "stardust/nft-output-claim.rs"
+
+[[example]]
 name = "alias-output-claim"
 path = "stardust/alias-output-claim.rs"
 
