--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.7.4",
     "clsx": "^2.0.0",
     "copy-text-to-clipboard": "^3.2.0",
+    "docusaurus-theme-search-typesense": "0.20.0-0",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "graphql-config": "^5.0.3",
