feat(docs/stardust): add docs for basic output claim

--- a/docs/examples/rust/Cargo.toml
+++ b/docs/examples/rust/Cargo.toml
@@ -36,6 +36,10 @@ name = "basic-output-claim"
 path = "stardust/basic-output-claim.rs"
 
 [[example]]
+name = "check-basic-output-unlock-conditions"
+path = "stardust/check-basic-output-unlock-conditions.rs"
+
+[[example]]
 name = "nft-migration"
 path = "stardust/nft-migration.rs"
 
