--- a/docs/examples/rust/Cargo.toml
+++ b/docs/examples/rust/Cargo.toml
@@ -50,3 +50,7 @@ path = "stardust/nft-migration.rs"
 [[example]]
 name = "foundry-output-claim"
 path = "stardust/foundry-output-claim.rs"
+
+[[example]]
+name = "self-sponsor"
+path = "stardust/self-sponsor.rs"
