--- a/sdk/graphql-transport/package.json
+++ b/sdk/graphql-transport/package.json
@@ -52,6 +52,7 @@
         "@iota/build-scripts": "workspace:*",
         "@parcel/watcher": "^2.3.0",
         "@types/node": "^20.4.2",
+        "dotenv": "^16.4.5",
         "graphql-config": "^5.0.3",
         "typescript": "^5.3.3",
         "vitest": "^0.33.0",
