--- a/.github/workflows/_external_rust_lints.yml
+++ b/.github/workflows/_external_rust_lints.yml
@@ -3,17 +3,6 @@ name: Rust lints
 on: [workflow_call]
 
 jobs:
-  clippy:
-    runs-on: [self-hosted]
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-      - run: rustup component add clippy
-
-      # See '.cargo/config' for list of enabled/disabled clippy lints
-      - name: cargo move-clippy
-        run: |
-          cargo +stable ci-clippy-external
-
   rustfmt:
     runs-on: [self-hosted]
     steps:
@@ -30,3 +19,17 @@ jobs:
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
       - uses: EmbarkStudios/cargo-deny-action@v1
+
+  clippy:
+    needs:
+      - rustfmt
+      - cargo-deny
+    runs-on: [self-hosted]
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - run: rustup component add clippy
+
+      # See '.cargo/config' for list of enabled/disabled clippy lints
+      - name: cargo move-clippy
+        run: |
+          cargo +stable ci-clippy-external
