--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -15,7 +15,27 @@ jobs:
       - name: Run cargo-license-template
         run: cargo ci-license
 
+  rustfmt:
+    runs-on: [self-hosted]
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - name: Install latest nightly
+        run: rustup toolchain install nightly --component rustfmt --allow-downgrade
+      - name: Check Rust formatting
+        run: cargo +nightly ci-fmt
+
+  cargo-deny:
+    name: cargo-deny (advisories, licenses, bans, ...)
+    runs-on: [self-hosted]
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: EmbarkStudios/cargo-deny-action@v1
+
   clippy:
+    needs:
+      - license-check
+      - rustfmt
+      - cargo-deny
     runs-on: [self-hosted]
     steps:
       - uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # pin@v3.0.0
@@ -34,19 +54,3 @@ jobs:
       # See '.cargo/config' for list of enabled/disabled clippy lints
       - name: Check Clippy Lints
         run: cargo +stable ci-clippy
-
-  rustfmt:
-    runs-on: [self-hosted]
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-      - name: Install latest nightly
-        run: rustup toolchain install nightly --component rustfmt --allow-downgrade
-      - name: Check Rust formatting
-        run: cargo +nightly ci-fmt
-
-  cargo-deny:
-    name: cargo-deny (advisories, licenses, bans, ...)
-    runs-on: [self-hosted]
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-      - uses: EmbarkStudios/cargo-deny-action@v1
