feat(devx): added !/docs to .prettierignore feat(devx): removed the rule to ignore .mdx files as they are not covered by dprint feat(devx): added config for docs in prettier.config.js

--- a/.prettierignore
+++ b/.prettierignore
@@ -6,10 +6,10 @@
 !/dapps
 !/.config
 !/*.js
+!/docs
 
 # ignore markdown and yml files because they are covered by dprint
 **/*.md
-**/*.mdx
 **/*.yml
 **/*.yaml
 
