fix merge and update deps

--- a/crates/iota-config/Cargo.toml
+++ b/crates/iota-config/Cargo.toml
@@ -19,7 +19,7 @@ once_cell.workspace = true
 prometheus.workspace = true
 rand.workspace = true
 reqwest.workspace = true
-serde = { workspace = true, features = ["derive", "rc"] }
+serde.workspace = true
 serde_with.workspace = true
 serde_yaml.workspace = true
 tracing.workspace = true
