--- a/Cargo.toml
+++ b/Cargo.toml
@@ -224,18 +224,18 @@ bincode = "1.3"
 bip32 = "0.5"
 byteorder = "1.4"
 bytes = { version = "1.5", features = ["serde"] }
-cached = { version = "0.51", features = ["async"] }
+cached = { version = "0.53", features = ["async"] }
 camino = "1.1"
 cfg-if = "1.0"
 chrono = { version = "0.4", features = ["clock", "serde"] }
-clap = { version = "4.4", features = ["derive", "wrap_help"] }
+clap = { version = "4.5", features = ["derive", "wrap_help"] }
 colored = "2.0"
-comfy-table = "6.1"
+comfy-table = "7.1"
 const-str = "0.5"
 criterion = { version = "0.5", features = ["async", "async_tokio", "html_reports"] }
-crossterm = "0.25"
+crossterm = "0.28"
 csv = "1.2"
-dashmap = "5.5"
+dashmap = "6.0"
 datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
 derivative = "2.2"
 diesel = { version = "2.2", features = ["chrono", "postgres", "r2d2", "serde_json", "64-column-tables", "i-implement-a-third-party-backend-and-opt-into-breaking-changes", "postgres_backend"] }
@@ -245,7 +245,7 @@ either = "1.8"
 enum_dispatch = "^0.3"
 expect-test = "1.4"
 eyre = "0.6"
-fdlimit = "0.2"
+fdlimit = "0.3"
 flate2 = "1.0"
 fs_extra = "1.3"
 futures = "0.3"
@@ -262,13 +262,13 @@ im = "15.1"
 indexmap = { version = "2.1", features = ["serde"] }
 indicatif = "0.17"
 insta = { version = "1.21", features = ["redactions", "yaml", "json"] }
-integer-encoding = "3.0"
+integer-encoding = "4.0"
 itertools = "0.13"
-json_to_table = "0.6"
+json_to_table = "0.6" # Version 0.8 is incompatable with tabled
 jsonrpsee = { version = "0.24", features = ["server", "macros", "client", "ws-client", "http-client"] }
 leb128 = "0.2"
-lru = "0.10"
-mockall = "0.11"
+lru = "0.12"
+mockall = "0.13"
 more-asserts = "0.3"
 msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "6f88ec84644cb1a6809c010f1f534d0d09e0cd89", package = "msim" }
 notify = "6.1"
@@ -282,35 +282,35 @@ pretty_assertions = "1.3"
 proc-macro2 = "1.0"
 prometheus = "0.13"
 proptest = "1.1"
-proptest-derive = "0.3"
+proptest-derive = "0.5"
 prost = "0.13"
-quinn-proto = "^0.10.5"
+quinn-proto = "0.10" # Version 0.11 is incompatable with prometheus
 quote = "1.0"
 rand = "0.8"
 regex = "1.7"
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 roaring = "0.10"
-rocksdb = { version = "0.21", features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"], default-features = false }
-rstest = "0.16"
+rocksdb = { version = "0.22", features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"], default-features = false }
+rstest = "0.22"
 schemars = { version = "0.8", features = ["either"] }
 scopeguard = "1.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde-reflection = "0.4"
 serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
-serde_with = { version = "2.3", features = ["hex"] }
+serde_with = { version = "2.3", features = ["hex"] } # Version 3 is incompatable with fastcrypto
 serde_yaml = "0.9"
 shellexpand = "3.1"
-signature = "1.6"
+signature = "2.2"
 similar = "2.4"
 smallvec = "1.10"
 snap = "1.1"
 static_assertions = "1.1"
 strum = { version = "0.26", features = ["derive"] }
 syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
-tabled = "0.12"
+tabled = "0.12" # Version 0.16 is incompatable with ratatui
 tap = "1.0"
-tempfile = "3.3"
-test-fuzz = "3.0"
+tempfile = "3.12"
+test-fuzz = "5.2"
 thiserror = "1.0"
 tokio = "1.36"
 tokio-stream = { version = "0.1", features = ["sync", "net"] }
