--- a/crates/iota-aws-orchestrator/Cargo.toml
+++ b/crates/iota-aws-orchestrator/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 async-trait.workspace = true
 aws-config.workspace = true
 aws-runtime = "1.3"
-aws-sdk-ec2 = "1.54"
+aws-sdk-ec2 = "1.62"
 aws-smithy-http = "0.60"
 aws-smithy-runtime-api = "1.7"
 clap.workspace = true
@@ -21,8 +21,8 @@ futures.workspace = true
 prettytable-rs = "0.10"
 prometheus-parse = "0.2"
 reqwest.workspace = true
-russh = "0.38"
-russh-keys = "0.38"
+russh = "0.44"
+russh-keys = "0.44"
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
@@ -35,7 +35,7 @@ mysten-metrics.workspace = true
 narwhal-config.workspace = true
 
 [dev-dependencies]
-tempfile = "3.6"
+tempfile.workspace = true
 
 [[bin]]
 name = "iota-aws-orchestrator"
