--- a/crates/iota-metric-checker/Cargo.toml
+++ b/crates/iota-metric-checker/Cargo.toml
@@ -11,7 +11,7 @@ anyhow.workspace = true
 backoff.workspace = true
 base64.workspace = true
 chrono.workspace = true
-clap = { version = "4.3", features = ["derive"] }
+clap.workspace = true
 humantime.workspace = true
 once_cell.workspace = true
 prometheus-http-query = { version = "0.8", default-features = false, features = ["rustls-tls"] }
