--- a/crates/iota-source-validation-service/Cargo.toml
+++ b/crates/iota-source-validation-service/Cargo.toml
@@ -18,8 +18,8 @@ anyhow = { version = "1.0", features = ["backtrace"] }
 clap.workspace = true
 hyper.workspace = true
 jsonrpsee.workspace = true
-serde = { version = "1.0", features = ["derive"] }
-tempfile = "3.3"
+serde.workspace = true
+tempfile.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 toml = { version = "0.8", features = ["preserve_order"] }
 tracing = "0.1"
