--- a/external-crates/move/Cargo.toml
+++ b/external-crates/move/Cargo.toml
@@ -11,18 +11,18 @@ members = [
 # Dependencies that should be kept in sync through the whole workspace
 [workspace.dependencies]
 anyhow = "1.0"
-arbitrary = { version = "1.1", features = ["derive", "derive_arbitrary"] }
+arbitrary = { version = "1.3", features = ["derive", "derive_arbitrary"] }
 bcs = "0.1"
 better_any = { version = "0.2", features = ["derive"] }
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4.5", features = ["derive"] }
 codespan = "0.11"
 codespan-reporting = "0.11"
-colored = "2.0"
-datatest-stable = "0.1"
+colored = "2.1"
+datatest-stable = "0.2"
 dir-diff = "0.3"
 dunce = "1.0"
-ethnum = "1.0"
-fail = "0.4"
+ethnum = "1.5"
+fail = "0.5"
 file_diff = "1.0"
 getrandom = "0.2"
 hex = "0.4"
@@ -31,29 +31,29 @@ im = "15.1"
 itertools = "0.13"
 log = { version = "0.4", features = ["serde"] }
 num = "0.4"
-once_cell = "1.7"
+once_cell = "1.19"
 parking_lot = "0.12"
-petgraph = "0.5"
-proptest = "1.0"
-proptest-derive = "0.3"
+petgraph = "0.6"
+proptest = "1.5"
+proptest-derive = "0.5"
 rand = "0.8"
-ratatui = "0.27"
-rayon = "1.5"
+ratatui = "0.28"
+rayon = "1.10"
 ref-cast = "1.0"
-regex = "1.5"
-serde = { version = "1.0", features = ["derive"] }
+regex = "1.10"
+serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
-sha2 = "0.9"
-sha3 = "0.9"
-similar = "2.4"
-smallvec = "1.6"
-tempfile = "3.2"
+sha2 = "0.10"
+sha3 = "0.10"
+similar = "2.6"
+smallvec = "1.13"
+tempfile = "3.12"
 toml = "0.8"
 toml_edit = "0.22"
 tracing = "0.1"
-vfs = "0.10"
-walkdir = "2.3"
+vfs = "0.12"
+walkdir = "2.5"
 
 bytecode-interpreter-crypto = { path = "crates/bytecode-interpreter-crypto" }
 enum-compat-util = { path = "crates/enum-compat-util" }
