--- a/external-crates/move/crates/move-stdlib/Cargo.toml
+++ b/external-crates/move/crates/move-stdlib/Cargo.toml
@@ -19,7 +19,7 @@ move-core-types.workspace = true
 move-docgen.workspace = true
 move-errmapgen.workspace = true
 move-prover.workspace = true
-move-vm-runtime = { path = "../move-vm-runtime" }
+move-vm-runtime.workspace = true
 move-vm-types.workspace = true
 sha2.workspace = true
 sha3.workspace = true
