--- a/external-crates/move/crates/move-vm-test-utils/Cargo.toml
+++ b/external-crates/move/crates/move-vm-test-utils/Cargo.toml
@@ -12,7 +12,7 @@ description = "Move VM Test Utils"
 [dependencies]
 anyhow.workspace = true
 once_cell.workspace = true
-serde = { workspace = true, features = ["derive", "rc"] }
+serde.workspace = true
 
 move-binary-format.workspace = true
 move-core-types.workspace = true
