--- a/nre/bpf/nodefw/nodefw/Cargo.toml
+++ b/nre/bpf/nodefw/nodefw/Cargo.toml
@@ -10,15 +10,15 @@ axum = { version = "0.7", default-features = false, features = ["headers", "toki
 axum-server = { version = "0.6", default-features = false }
 aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
 aya-log = { git = "https://github.com/aya-rs/aya" }
-clap = { version = "4.1", features = ["derive"] }
-env_logger = "0.10"
+clap = { version = "4.5", features = ["derive"] }
+env_logger = "0.11"
 http-body = "0.4"
 libc = "0.2"
 log = "0.4"
-nix = { version = "0.27", features = ["time"] }
+nix = { version = "0.29", features = ["time"] }
 nodefw-common = { path = "../nodefw-common", features = ["user"] }
-serde = { version = "1.0", features = ["derive", "rc"] }
-serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
+serde.workspace = true
+serde_json = { workspace = true, features = ["preserve_order", "arbitrary_precision"] }
 tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
 tokio-util = "0.7"
 tower = { version = "0.4", features = ["full", "util", "timeout", "load-shed", "limit"] }
