fixup! refactor(docker): create dedicated Dockerfile for iota-test-validator

--- a/docker/pg-services-local/docker-compose.yaml
+++ b/docker/pg-services-local/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: iota-test-validator
     build:
       context: ../../
-      dockerfile: docker/iota-tools/Dockerfile.iota-test-validator
+      dockerfile: docker/iota-test-validator/Dockerfile
       args:
         - GIT_REVISION
         - BUILD_DATE
