--- a/.github/actions/turbo-diffs/action.yml
+++ b/.github/actions/turbo-diffs/action.yml
@@ -11,6 +11,9 @@ runs:
       with:
         fetch-depth: 0
     - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # pin@v4.0.0
+    - uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # pin@v4.0.2
+      with:
+        node-version: "20"
     - id: changes
       name: Detect changes
       shell: bash
