fix(ci): don't use +stable clippy

--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -97,7 +97,7 @@ jobs:
       # See '.cargo/config' for list of enabled/disabled clippy lints
       - name: cargo move-clippy
         run: |
-          cargo +stable ci-clippy-external
+          cargo ci-clippy-external
 
   rustfmt:
     needs: diff
