feat(tooling-ci): Ignore 'apps-ui-kit' in changesets

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -14,6 +14,7 @@
 		"wallet-dashboard",
 		"@iota/core",
 		"@iota/ui",
+		"@iota/apps-ui-kit",
 		"sponsored-transactions",
 		"kiosk-demo",
 		"kiosk-cli"
