--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -88,18 +88,18 @@ jobs:
           path: apps/explorer/playwright-report/
           retention-days: 30
 
-      - name: Run Local net
-        run: cargo run --bin iota-test-validator -- --epoch-duration-ms 10000 &
-      - name: Build Wallet
-        # need to run Wallet e2e when its upstream(TS SDK and Rust) or itself is changed
-        if: ${{ needs.diff.outputs.isWallet == 'true' || needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
-        run: pnpm wallet build
-      - name: Run Wallet e2e tests
-        if: ${{ needs.diff.outputs.isWallet == 'true' || needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
-        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm --filter iota-wallet playwright test
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report-wallet
-          path: apps/wallet/playwright-report/
-          retention-days: 30
+      # - name: Run Local net
+      #   run: cargo run --bin iota-test-validator -- --epoch-duration-ms 10000 &
+      # - name: Build Wallet
+      #   # need to run Wallet e2e when its upstream(TS SDK and Rust) or itself is changed
+      #   if: ${{ needs.diff.outputs.isWallet == 'true' || needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
+      #   run: pnpm wallet build
+      # - name: Run Wallet e2e tests
+      #   if: ${{ needs.diff.outputs.isWallet == 'true' || needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
+      #   run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm --filter iota-wallet playwright test
+      # - uses: actions/upload-artifact@v3
+      #   if: always()
+      #   with:
+      #     name: playwright-report-wallet
+      #     path: apps/wallet/playwright-report/
+      #     retention-days: 30
