--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,7 +25,7 @@ jobs:
         uses: "./.github/actions/diffs"
         id: diff
 
-  # Run e2e test against localnet built on the main branch
+  # Run e2e test against localnet built on the develop branch
   localnet:
     name: Localnet
     needs: diff
