--- a/.github/workflows/release-notes-monitor.yml
+++ b/.github/workflows/release-notes-monitor.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout iota repo main branch
+      - name: Checkout iota repo develop branch
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
         with:
           fetch-depth: 0
