fixup! fixup! fix(docker): resolve artifacts directory from profile

--- a/docker/iota-graphql-rpc/Dockerfile
+++ b/docker/iota-graphql-rpc/Dockerfile
@@ -4,7 +4,7 @@
 # and build the application.
 FROM rust:bullseye AS builder
 ARG PROFILE=release
-ENV OUT_DIR=$PROFILE
+ENV PROFILE=$PROFILE
 ARG GIT_REVISION
 ENV GIT_REVISION=$GIT_REVISION
 WORKDIR "$WORKDIR/iota"
