feat(tooling-ci): Ignore apps-backend in changesets

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,6 +12,7 @@
 		"iota-wallet",
 		"iota-explorer",
 		"wallet-dashboard",
+		"apps-backend",
 		"@iota/core",
 		"@iota/ui",
 		"@iota/apps-ui-kit",
