--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -17,6 +17,7 @@ concurrency:
 
 jobs:
   diff:
+    if: github.event.pull_request.draft == false
     runs-on: [self-hosted]
     outputs:
       isRust: ${{ steps.diff.outputs.isRust }}
@@ -37,6 +38,7 @@ jobs:
         id: diff
 
   dprint-format:
+    if: github.event.pull_request.draft == false
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -44,9 +46,11 @@ jobs:
         run: dprint check
 
   typos:
+    if: github.event.pull_request.draft == false
     uses: ./.github/workflows/_typos.yml
 
   license-check:
+    if: github.event.pull_request.draft == false
     name: license-check
     needs: diff
     if: ${{ always() && needs.diff.outputs.isRust == 'true' }}
