--- a/.github/workflows/apps-explorer-preview.deploy.yml
+++ b/.github/workflows/apps-explorer-preview.deploy.yml
@@ -6,7 +6,7 @@ env:
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - "apps/explorer/**"
       - ".github/workflows/apps-explorer-preview.deploy.yml"
@@ -17,6 +17,7 @@ concurrency:
 
 jobs:
   deploy-preview:
+    if: github.event.pull_request.draft == false
     permissions:
       contents: read
       pull-requests: write
