chose(CI): Re-enable simtests with forked repos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -237,7 +237,7 @@ bimap = "0.6.2"
 bincode = "1.3.3"
 bip32 = "0.5.1"
 byteorder = "1.4.3"
-bytes = { version = "1.5.0", features = ["serde"] }
+bytes = { version = "1.7.0", features = ["serde"] }
 cached = { version = "0.51.4", features = ["async"] }
 camino = "1.1.1"
 cfg-if = "1.0.0"
@@ -312,8 +312,8 @@ mime = "0.3"
 mockall = "0.11.4"
 moka = { version = "0.12", default-features = false, features = ["sync", "atomic64"] }
 more-asserts = "0.3.1"
-msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "6f88ec84644cb1a6809c010f1f534d0d09e0cd89", package = "msim" }
-msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "6f88ec84644cb1a6809c010f1f534d0d09e0cd89", package = "msim-macros" }
+msim = { git = "ssh://git@github.com/iotaledger/iota-sim.git", branch = "main", package = "msim" }
+msim-macros = { git = "ssh://git@github.com/iotaledger/iota-sim.git", branch = "main", package = "msim-macros" }
 multiaddr = "0.17.0"
 nexlint = { git = "https://github.com/nextest-rs/nexlint.git", rev = "94da5c787636dad779c340affa65219134d127f5" }
 nexlint-lints = { git = "https://github.com/nextest-rs/nexlint.git", rev = "94da5c787636dad779c340affa65219134d127f5" }
