--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -187,27 +187,26 @@ jobs:
       - run: scripts/changed-files.sh
         shell: bash
 
-  # TODO: Disabled until we can get an updated fork of msim with tokio 1.38 https://github.com/iotaledger/iota/issues/1212
-  # simtest:
-  #     name: Simtest ${{ matrix.components }}
-  #     needs: changes
-  #     timeout-minutes: 45
-  #     runs-on: [self-hosted]
-  #     strategy:
-  #         matrix:
-  #             components: ${{ fromJson(needs.changes.outputs.components) }}
-  #         fail-fast: false
-  #     env:
-  #         MSIM_WATCHDOG_TIMEOUT_MS: 60000
-  #     steps:
-  #         - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-  #         - uses: taiki-e/install-action@nextest
-  #         - name: cargo simtest
-  #           run: |
-  #               scripts/simtest/cargo-simtest simtest -E 'rdeps(${{matrix.components}})' -p ${{matrix.components}}
-  #         - name: check new tests for flakiness
-  #           run: |
-  #               scripts/simtest/stress-new-tests.sh -E 'rdeps(${{matrix.components}})' -p ${{matrix.components}}
+  simtest:
+    name: Simtest ${{ matrix.components }}
+    needs: changes
+    timeout-minutes: 45
+    runs-on: [self-hosted]
+    strategy:
+      matrix:
+        components: ${{ fromJson(needs.changes.outputs.components) }}
+      fail-fast: false
+    env:
+      MSIM_WATCHDOG_TIMEOUT_MS: 60000
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: taiki-e/install-action@nextest
+      - name: cargo simtest
+        run: |
+          scripts/simtest/cargo-simtest simtest -E 'rdeps(${{matrix.components}})' -p ${{matrix.components}}
+      - name: check new tests for flakiness
+        run: |
+          scripts/simtest/stress-new-tests.sh -E 'rdeps(${{matrix.components}})' -p ${{matrix.components}}
 
   # This job ensures that Move unit tests are run if there are changes
   # to Move code but not Rust code (If there are Rust changes, they
