--- a/.github/workflows/_typos.yml
+++ b/.github/workflows/_typos.yml
@@ -1,6 +1,6 @@
 name: Typos
 
-on: [workflow_call]
+on: workflow_call
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
