--- a/crates/iota-types/Cargo.toml
+++ b/crates/iota-types/Cargo.toml
@@ -66,7 +66,7 @@ fastcrypto-zkp.workspace = true
 
 derive_more.workspace = true
 proptest.workspace = true
-proptest-derive.workspace = true
+proptest-derive = { workspace = true, optional = true }
 typed-store-error.workspace = true
 
 [dev-dependencies]
@@ -74,7 +74,6 @@ bincode.workspace = true
 criterion.workspace = true
 expect-test.workspace = true
 proptest.workspace = true
-proptest-derive.workspace = true
 serde_yaml.workspace = true
 
 [[bench]]
@@ -89,4 +88,4 @@ gas-profiler = [
   "move-vm-types/gas-profiler",
   "move-vm-test-utils/gas-profiler",
 ]
-fuzzing = ["move-core-types/fuzzing"]
+fuzzing = ["move-core-types/fuzzing", "proptest-derive"]
