--- a/narwhal/primary/Cargo.toml
+++ b/narwhal/primary/Cargo.toml
@@ -75,3 +75,6 @@ bench = false
 name = "process_certificates"
 harness = false
 required-features = ["benchmark"]
+
+[package.metadata.cargo-udeps.ignore]
+development = ["criterion"]
