--- a/crates/iota-indexer/Cargo.toml
+++ b/crates/iota-indexer/Cargo.toml
@@ -62,3 +62,6 @@ simulacrum.workspace = true
 [[bin]]
 name = "iota-indexer"
 path = "src/main.rs"
+
+[package.metadata.cargo-udeps.ignore]
+development = ["simulacrum"]
