--- a/crates/mysten-common/Cargo.toml
+++ b/crates/mysten-common/Cargo.toml
@@ -9,4 +9,7 @@ publish = false
 [dependencies]
 futures.workspace = true
 parking_lot.workspace = true
-tokio.workspace = true
+tokio = { workspace = true, features = ["sync"] }
+
+[dev-dependencies]
+tokio = { workspace = true, features = ["test-util", "macros"] }
