Add Identity tags

--- a/docs/content/tags.yml
+++ b/docs/content/tags.yml
@@ -94,6 +94,10 @@ did:
   label: DID
   description: Decentralized Identifier.
 
+identity:
+  label: IOTA Identity
+  description: The IOTA Identity Implementation.
+
 verifiable-credentials:
   label: Verifiable Credentials
   description: Verifiable Credentials.
