--- a/.github/workflows/_e2e.yml
+++ b/.github/workflows/_e2e.yml
@@ -24,7 +24,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Run e2e test against localnet built on the main branch
+  # Run e2e test against localnet built on the develop branch
   localnet:
     name: Localnet
     if: inputs.isExplorer || inputs.isTypescriptSDK || inputs.isWallet || inputs.isRust
