use diff for license check

--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -48,6 +48,8 @@ jobs:
 
   license-check:
     name: license-check
+    needs: diff
+    if: ${{ needs.diff.outputs.isRust == 'true' }}
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -90,7 +92,6 @@ jobs:
 
   turborepo:
     needs:
-      - diff
       - dprint-format
       - license-check
       - typos
