--- a/.github/actions/diffs/action.yml
+++ b/.github/actions/diffs/action.yml
@@ -32,13 +32,20 @@ runs:
             - "external-crates/**"
             - "narwhal/**"
             - "iota-execution/**"
+            - ".github/workflows/hierarchy.yml"
             - ".github/workflows/codecov.yml"
-            - ".github/workflows/rust.yml"
-            - ".github/workflows/external.yml"
+            - ".github/workflows/_rust.yml"
+            - ".github/workflows/_rust_tests.yml"
+            - ".github/workflows/_rust_lints.yml"
+            - ".github/workflows/_external_rust_tests.yml"
+            - ".github/workflows/_external_rust_lints.yml"
+            - ".github/workflows/_mysticeti_tests.yml"
           isDoc:
             - "docs/content/**"
+            - "docs/site/**"
             - "*.mdx"
-            - ".github/workflows/docs.yml"
+            - ".github/workflows/_docs_lint.yml"
+            - ".github/workflows/_docusaurus.yml"
           isOldDoc:
             - "doc/**"
             - "*.md"
@@ -50,6 +57,7 @@ runs:
             - "Cargo.toml"
             - "examples/**"
             - "iota_programmability/**"
+            - ".github/workflows/_move_tests.yml"
           isReleaseNotesEligible:
             - "consensus/**"
             - "crates/**"
