--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "sideEffects": false,
     "main": "./src/index.ts",
-    "author": "Mysten Labs <build@mystenlabs.com>",
+    "author": "IOTA Foundation <contact@iota.org>",
     "repository": {
         "type": "git",
         "url": "github.com:iotaledger/iota.git"
