--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -35,7 +35,7 @@
         "tokens",
         "balance"
     ],
-    "author": "Mysten Labs <build@mystenlabs.com>",
+    "author": "IOTA Foundation <contact@iota.org>",
     "license": "Apache-2.0",
     "devDependencies": {
         "@amplitude/ampli": "^1.31.5",
