--- a/sdk/ledgerjs-hw-app-iota/package.json
+++ b/sdk/ledgerjs-hw-app-iota/package.json
@@ -10,7 +10,7 @@
         "Blue",
         "Hardware Wallet"
     ],
-    "author": "Mysten Labs <build@mystenlabs.com>",
+    "author": "IOTA Foundation <contact@iota.org>",
     "license": "Apache-2.0",
     "repository": {
         "type": "git",
