--- a/sdk/bcs/package.json
+++ b/sdk/bcs/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "description": "BCS - Canonical Binary Serialization implementation for JavaScript",
     "license": "Apache-2.0",
-    "author": "Mysten Labs <build@mystenlabs.com>",
+    "author": "IOTA Foundation <contact@iota.org>",
     "sideEffects": false,
     "type": "commonjs",
     "main": "./dist/cjs/index.js",
