--- a/sdk/build-scripts/package.json
+++ b/sdk/build-scripts/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@iota/build-scripts",
     "private": true,
-    "author": "Mysten Labs <build@mystenlabs.com>",
+    "author": "IOTA Foundation <contact@iota.org>",
     "description": "Build scripts for @mysten packages",
     "version": "0.0.0",
     "license": "Apache-2.0",
