--- a/sdk/wallet-standard/package.json
+++ b/sdk/wallet-standard/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "description": "A suite of standard utilities for implementing wallets based on the Wallet Standard.",
     "license": "Apache-2.0",
-    "author": "Mysten Labs <build@mystenlabs.com>",
+    "author": "IOTA Foundation <contact@iota.org>",
     "type": "commonjs",
     "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
