--- a/.github/workflows/_external_rust_tests.yml
+++ b/.github/workflows/_external_rust_tests.yml
@@ -42,3 +42,18 @@ jobs:
           -E '!test(prove) and !test(run_all::simple_build_with_docs/args.txt) and !test(run_test::nested_deps_bad_parent/Move.toml) and rdeps(${{matrix.components}})'
           -p ${{matrix.components}}
           --profile ci
+
+  check-unused-deps:
+    name: Check Unused Dependencies of ${{ matrix.components }} (${{ matrix.flags }})
+    strategy:
+      matrix:
+        components: ${{ fromJson(needs.changes.outputs.components) }}
+        flags: ["--all-features", "--no-default-features"]
+      fail-fast: false
+    runs-on: [self-hosted]
+    needs: changes
+
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - name: Run Cargo Udeps
+        run: cargo +nightly ci-udeps-external -p ${{matrix.components}} ${{ matrix.flags }}
