--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -17,7 +17,9 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-      - uses: EmbarkStudios/cargo-deny-action@v1
+      - uses: EmbarkStudios/cargo-deny-action@8371184
+        with:
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
 
   clippy:
     needs:
