--- a/.github/workflows/_external_rust_lints.yml
+++ b/.github/workflows/_external_rust_lints.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: EmbarkStudios/cargo-deny-action@8371184bd11e21dcf8ac82ebf8c9c9f74ebf7268
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
+          use-git-cli: true
 
   clippy:
     needs:
