--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -49,7 +49,7 @@ jobs:
   license-check:
     name: license-check
     needs: diff
-    if: ${{ needs.diff.outputs.isRust == 'true' }}
+    if: ${{ always() && needs.diff.outputs.isRust == 'true' }}
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -58,18 +58,18 @@ jobs:
 
   docusaurus:
     needs: diff
-    if: ${{ needs.diff.outputs.isDoc == 'true' }}
+    if: ${{ always() && needs.diff.outputs.isDoc == 'true' }}
     uses: ./.github/workflows/_docusaurus.yml
 
   docs-lint:
     needs: diff
-    if: ${{ needs.diff.outputs.isDoc == 'true' }}
+    if: ${{ always() && needs.diff.outputs.isDoc == 'true' }}
     uses: ./.github/workflows/_docs_lint.yml
 
   release-notes-description-check:
     name: release-notes-check
     needs: diff
-    if: ${{ needs.diff.outputs.isReleaseNotesEligible == 'true' }}
+    if: ${{ always() && needs.diff.outputs.isReleaseNotesEligible == 'true' }}
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -102,7 +102,7 @@ jobs:
       - dprint-format
       - license-check
       - typos
-    if: ${{ needs.diff.outputs.isRust == 'false' && needs.diff.outputs.isMove == 'true' }}
+    if: ${{ always() && needs.diff.outputs.isRust == 'false' && needs.diff.outputs.isMove == 'true' }}
     uses: ./.github/workflows/_move_tests.yml
 
   rust:
@@ -128,35 +128,3 @@ jobs:
       isExplorer: ${{ needs.diff.outputs.isExplorer == 'true' }}
       isTypescriptSDK: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
       isGraphQlTransport: ${{ needs.diff.outputs.isGraphQlTransport == 'true' }}
-
-  # The following jobs run only to satisfy required workflows in github
-
-  stub-license-check:
-    name: license-check
-    needs: diff
-    if: ${{ needs.diff.outputs.isRust == 'false' }}
-    runs-on: [self-hosted]
-
-  stub-move-tests:
-    name: move-tests
-    needs: diff
-    if: ${{ needs.diff.outputs.isRust == 'true' || needs.diff.outputs.isMove == 'false' }}
-    runs-on: [self-hosted]
-
-  stub-docusaurus:
-    name: docusaurus
-    needs: diff
-    if: ${{ needs.diff.outputs.isDoc == 'false' }}
-    runs-on: [self-hosted]
-
-  stub-docs-lint:
-    name: docs-lint
-    needs: diff
-    if: ${{ needs.diff.outputs.isDoc == 'false' }}
-    runs-on: [self-hosted]
-
-  stub-release-notes-description-check:
-    name: release-notes-description-check
-    needs: diff
-    if: ${{ needs.diff.outputs.isReleaseNotesEligible == 'false' }}
-    runs-on: [self-hosted]
